# carta-protobuf

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  build_proto.sh
control/: animation.proto  channel_map.proto  close_file.proto  concat_stokes_files.proto  contour.proto  export_region.proto  import_region.proto  open_catalog_file.proto  open_file.proto  region.proto  region_requirements.proto  register_viewer.proto  resume_session.proto  set_cursor.proto  set_image_channels.proto  set_image_view.proto  spectral_line_request.proto  stop_moment_calc.proto  stop_pv_calc.proto  stop_render3d.proto  tiles.proto  user_layout.proto  user_preferences.proto  vector_overlay.proto
docs/: Makefile  application_layer.rst  behaviour.rst  catalog_overlay.rst  changelog.rst.txt  changing_view_parameters.rst  clean_html.py  conf.py  connection.rst  context.rst  control.rst  control.rst.txt  data_cube_navigation.rst  data_streaming.rst  defs.rst  defs.rst.txt  enums.rst  enums.rst.txt  file_browsing.rst  index.rst  index.rst.sphinx  introduction.rst  layer_descriptions.rst  messages.rst.txt  moments_generator.rst  presentation_layer.rst  region_selection_and_statistics.rst  request.rst  request.rst.txt  requirements.txt  resume_the_session.rst  session_layer.rst  shared.rst  stream.rst  stream.rst.txt  transport_layer.rst  user_preferences.rst
request/: catalog_file_info.proto  catalog_list.proto  export_data.proto  file_info.proto  file_list.proto  fitting_request.proto  moment_request.proto  pv_request.proto  random_data.proto  region_file_info.proto  region_list.proto  (+5 more)
(+54 files in other folders)
